@@ -13,7 +13,8 @@ Core and builtins
 -----------------
 
 - Issue #2371: Add a Py3k warning when catching an exception that
-  doesn't derive from BaseException.
+  doesn't derive from BaseException.  Issue #2341: Add a Py3k warning
+  when raising an exception that doesn't derive from BaseException.
 
 - Issue #2321: use pymalloc for unicode object string data to reduce
   memory usage in some circumstances.
